Added new task to execute the server. Closes #20

--- a/ca1/part2/gradle_basic_demo/build.gradle
+++ b/ca1/part2/gradle_basic_demo/build.gradle
@@ -57,3 +57,14 @@ task runClient(type:JavaExec, dependsOn: classes){
 
     args 'localhost', '59001'
 }
+
+tasks.register('runServer', JavaExec){
+    group = "DevOps"
+
+    description = "Launches a chat Server"
+
+    classpath = sourceSets.main.runtimeClasspath
+
+    mainClass = "basic_demo.ChatServerApp"
+    args '59001'
+}
