Add backup task to copy source files to a backup directory. Closes #22

--- a/ca1/part2/gradle_basic_demo/build.gradle
+++ b/ca1/part2/gradle_basic_demo/build.gradle
@@ -70,3 +70,13 @@ tasks.register('runServer', JavaExec){
     mainClass = "basic_demo.ChatServerApp"
     args '59001'
 }
+
+task backup(type: Copy) {
+    group = "DevOps"
+
+    description = "Make a backup of the sources of the Application"
+
+    from 'src'
+    into 'backup'
+}
+
