--- a/ca1/part3/react-and-spring-data-rest-basic/build.gradle
+++ b/ca1/part3/react-and-spring-data-rest-basic/build.gradle
@@ -30,3 +30,10 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+frontend {
+	nodeVersion = "16.20.2"
+	assembleScript = "run build"
+	cleanScript = "run clean"
+	checkScript = "run check"
+}
