Added task copyjar. Closes #29

--- a/ca1/part3/react-and-spring-data-rest-basic/build.gradle
+++ b/ca1/part3/react-and-spring-data-rest-basic/build.gradle
@@ -37,3 +37,9 @@ frontend {
 	cleanScript = "run clean"
 	checkScript = "run check"
 }
+
+task copyJar(type: Copy) {
+	dependsOn bootJar
+	from bootJar.outputs
+	into file("dist")
+}
