--- a/ca1/part3/react-and-spring-data-rest-basic/build.gradle
+++ b/ca1/part3/react-and-spring-data-rest-basic/build.gradle
@@ -43,3 +43,7 @@ task copyJar(type: Copy) {
 	from bootJar.outputs
 	into file("dist")
 }
+task cleanWebpack(type: Delete) {
+	delete 'src/main/resources/static/built'
+}
+clean.dependsOn cleanWebpack
