--- a/ca2/part2/Vagrantfile
+++ b/ca2/part2/Vagrantfile
@@ -67,6 +67,7 @@ Vagrant.configure("2") do |config|
           cd devops-24-25-1241911/ca1/part3/react-and-spring-data-rest-basic
           chmod u+x gradlew
           ./gradlew clean build
+          ./gradlew bootRun
 
           # Deploy the WAR to Tomcat
           sudo cp ./build/libs/react-and-spring-data-rest-basic-0.0.1-SNAPSHOT.jar /var/lib/tomcat9/webapps
