--- a/ca2/part2/Vagrantfile
+++ b/ca2/part2/Vagrantfile
@@ -47,6 +47,11 @@ Vagrant.configure("2") do |config|
         # Sync the host's SSH key folder into the VM (read-only)
         web.vm.synced_folder "~/.ssh", "/home/vagrant/.ssh_host", type: "virtualbox"
 
+     # We set more ram memmory for this VM
+        web.vm.provider "virtualbox" do |v|
+          v.memory = 1024
+        end
+
         # Enable SSH agent forwarding (optional)
         web.ssh.forward_agent = true
 
