start readme for ca2-part4

--- a/ca2/part4/web/Dockerfile
+++ b/ca2/part4/web/Dockerfile
@@ -1,5 +1,5 @@
 # Use Tomcat image instead of JDK
-FROM tomcat:9-jdk11-openjdk-slim
+FROM tomcat:10.1-jdk17-temurin
 
 # Install necessary tools (Git, Node.js, npm, and Nano for editing)
 RUN apt-get update \
@@ -21,10 +21,8 @@ WORKDIR /usr/src/app/ca1/part3/react-and-spring-data-rest-basic
 
 # Make gradlew executable and build the .war file
 RUN chmod +x gradlew \
-    && ./gradlew clean bootWar
-
-# Copy the .war file to Tomcat's webapps directory
-COPY build/libs/react-and-spring-data-rest-basic-0.0.1-SNAPSHOT.war /usr/local/tomcat/webapps/
+    && ./gradlew war \
+    && cp build/libs/react-and-spring-data-rest-basic-0.0.1-SNAPSHOT-plain.war /usr/local/tomcat/webapps/
 
 # Expose the port that Tomcat listens on (8080)
 EXPOSE 8080
