updated readme for ca2-part4

--- a/ca2/part4/docker-compose.yml
+++ b/ca2/part4/docker-compose.yml
@@ -1,41 +1,32 @@
 services:
-  db:
-    build:
-      context: ./db
-    container_name: ca2p4-db
-    ports:
-      - "9092:9092"
-      - "8082:8082"
-    volumes:
-      - h2data:/usr/src/app
-    networks:
-      - ca2net
-    restart: unless-stopped
-
   web:
-    build:
-      context: ./web
-    container_name: ca2p4-web
+    build: ./web
     ports:
       - "8080:8080"
+    networks:
+      my_custom_network:
+        ipv4_address: 192.168.56.10
     depends_on:
       - db
-    environment:
-      SPRING_DATASOURCE_URL:      jdbc:h2:tcp://db:9092/./test
-      SPRING_DATASOURCE_USERNAME: sa
-      SPRING_DATASOURCE_PASSWORD:
-      SPRING_H2_CONSOLE_ENABLED:  "true"
-      SPRING_H2_CONSOLE_PATH:     /h2-console
-    networks:
-      - ca2net
-    restart: unless-stopped
-#    volumes:
-#      - ./config/tomcat-users.xml:/usr/local/tomcat/conf/tomcat-users.xml
-#      - .cd /config/webapps:/usr/local/tomcat/webapps
 
-volumes:
-  h2data:
+  db:
+    build: ./db
+    ports:
+      - "8082:8082"
+      - "9092:9092"
+    volumes:
+      - ./data:/usr/src/data-backup
+    networks:
+      my_custom_network:
+        ipv4_address: 192.168.56.11
 
 networks:
-  ca2net:
+  my_custom_network:
     driver: bridge
+    ipam:
+      config:
+        - subnet: "192.168.56.0/24"
+
+volumes:
+  db_data: {}
+
