--- a/ca2/part4/db/Dockerfile
+++ b/ca2/part4/db/Dockerfile
@@ -1,15 +1,17 @@
-FROM openjdk:17-jdk-slim
+FROM ubuntu:latest
 
-RUN apt-get update \
-    && apt-get install -y wget \
-    && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && \
+    apt-get install -y openjdk-11-jdk-headless && \
+    apt-get install unzip -y && \
+    apt-get install wget -y
 
-WORKDIR /usr/src/app
+RUN mkdir -p /usr/src/app
+
+WORKDIR /usr/src/app/
 
 RUN wget https://repo1.maven.org/maven2/com/h2database/h2/1.4.200/h2-1.4.200.jar
 
-EXPOSE 9092 8082
+EXPOSE 8082
+EXPOSE 9092
 
-CMD ["java", "-cp", "./h2-1.4.200.jar", "org.h2.tools.Server", \
-     "-tcp", "-tcpAllowOthers", "-ifNotExists", \
-     "-web", "-webAllowOthers"]
+CMD ["java", "-cp", "./h2-1.4.200.jar", "org.h2.tools.Server", "-web", "-webAllowOthers", "-tcp", "-tcpAllowOthers", "-ifNotExists"]
