--- a/ca3/gradle_basic_demo/Jenkinsfile
+++ b/ca3/gradle_basic_demo/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
         stage('Checkout') {
             steps {
                 echo 'Checking out from repository'
-                git branch: 'main', url: 'https://github.com/JoaoRuaCardoso/devops-24-25-1241911.git'
+                git branch: 'master', url: 'https://github.com/JoaoRuaCardoso/devops-24-25-1241911.git'
             }
         }
         stage('Assemble') {
