Updated Jenkins file for react

--- a/ca3/react-and-spring-data-rest-basic/Jenkinsfile
+++ b/ca3/react-and-spring-data-rest-basic/Jenkinsfile
@@ -74,7 +74,7 @@ ENTRYPOINT ["java","-jar","app.jar"]
             steps {
                 dir('ca1/part3/react-and-spring-data-rest-basic') {
                     echo 'Archiving...'
-                    archiveArtifacts artifacts: 'build/libs/*.jar', fingerprint: true
+                    archiveArtifacts artifacts: 'build/libs/*.war', fingerprint: true
                 }
             }
         }
