Ref #43 : Update build grade

--- a/ca1/part3/react-and-spring-data-rest-basic/build.gradle
+++ b/ca1/part3/react-and-spring-data-rest-basic/build.gradle
@@ -10,11 +10,11 @@ plugins {
 group = 'com.greglturnquist'
 version = '0.0.1-SNAPSHOT'
 
-java {
+//java {
 	toolchain {
-		languageVersion = JavaLanguageVersion.of(17)
-	}
-}
+//		languageVersion = JavaLanguageVersion.of(17)
+//	}
+//}
 
 repositories {
 	mavenCentral()
