--- a/ca3/react-and-spring-data-rest-basic/Jenkinsfile
+++ b/ca3/react-and-spring-data-rest-basic/Jenkinsfile
@@ -6,6 +6,7 @@ pipeline {
         DOCKER_IMAGE          = 'joaogaranhascardoso/springboot-app'
         DOCKER_REGISTRY       = 'https://index.docker.io/v1/'
         REPO_URL              = 'https://github.com/JoaoRuaCardoso/devops-24-25-1241911.git'
+        DOCKER_HOST           = 'tcp://host.docker.internal:2375'
     }
 
     stages {
